<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.orbital.babyorbbyorbitroniks.MainActivity"
    android:weightSum="1"
    android:contextClickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleName"
        android:id="@+id/titleTextview"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetoothConnectBtn"
        android:id="@+id/connectBT"
        android:onClick="onConnectBtn"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup_mode_select"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/radioGroupTitle"
                android:id="@+id/modeSelect_textView" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/static_control"
                android:id="@+id/radioButton_Mode_1"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lava_lamp"
                android:id="@+id/radioButton_Mode_2"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_mode"
                android:id="@+id/radioButton_Mode_3"
                android:checked="false" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep_mode_w_listener"
                android:id="@+id/radioButton_Mode_4"
                android:checked="false" />

        </RadioGroup>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rx text"
                android:id="@+id/rxView"
                android:elegantTextHeight="false"
                />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/commandLayout"
                android:weightSum="1">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txTextBox"
                    android:hint="Tx"
                    android:selectAllOnFocus="false"

                    android:layout_weight="0.92"
                    android:layout_gravity="bottom" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send"
                    android:onClick="onTxSendBtn"
                    android:id="@+id/txSendBtn"
                    android:longClickable="false"
                    android:layout_gravity="bottom" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Sleep Timeout:"
                android:id="@+id/timeout_textView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/peak_textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbarLayout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/seekBarRed"
                android:max="254"
                android:progressDrawable="@drawable/red_apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/red_apptheme_scrubber_control_selector_holo_light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progress="0"
                android:focusableInTouchMode="false"
                android:clickable="true"
                />

            <Button
                android:tag="redBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/redOffBtn"
                android:background="#00ffffff"
                android:onClick="ledIoFromBtnController"
                android:visibility="invisible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/seekBarGreen"
                android:max="254"
                android:progressDrawable="@drawable/green_apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/green_apptheme_scrubber_control_selector_holo_light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="false"
                android:progress="0"
                />

            <Button
                android:tag="greenBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/greenOffBtn"
                android:layout_gravity="center"
                android:onClick="ledIoFromBtnController"
                android:background="#00ffffff"
                android:visibility="invisible" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <SeekBar
                android:id="@+id/seekBarBlue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progressDrawable="@drawable/blue_apptheme_scrubber_progress_horizontal_holo_light"
                android:thumb="@drawable/blue_apptheme_scrubber_control_selector_holo_light"
                android:indeterminate="false"
                android:max="254"
                android:progress="0"
                />

            <Button
                android:tag="blueBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/blueOffBtn"
                android:layout_gravity="center"
                android:onClick="ledIoFromBtnController"
                android:background="#00ffffff"
                android:visibility="invisible" />
        </FrameLayout>

        <SeekBar
            android:id="@+id/seekBarMotorGrey"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
            android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
            android:indeterminate="false"
            android:max="254"
            android:progress="0"
            android:paddingTop="15dp" />

        <SeekBar
            android:id="@+id/seekBarSpeed"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:progressDrawable="@drawable/apptheme_scrubber_progress_horizontal_holo_light"
            android:thumb="@drawable/apptheme_scrubber_control_selector_holo_light"
            android:indeterminate="false"
            android:max="250"
            android:progress="0"
            android:paddingTop="10dp"
            android:paddingBottom="20dp" />

    </LinearLayout>


</LinearLayout>
